# Smarttraffic-Webpage

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  index.html  manage.py  pyproject.toml  style.css
docker/: build-staticfiles.sh  build.sh  start.sh  uwsgi.ini
docker/compose/smwebsite/: docker-compose.yml
smwebsite/: settings.py  urls.py  views.py  wsgi.py
smwebsite/locale/es/LC_MESSAGES/: django.mo  django.po
smwebsite/locale/it/LC_MESSAGES/: django.mo  django.po
smwebsite/settings/: __init__.py  base.py  build_staticfiles.py  production.py
smwebsite/static/smwebsite/: main.js  style.css
smwebsite/static/smwebsite/css/: animate.css  responsive.css
smwebsite/templates/blog/: index.html
smwebsite/templates/dissemination/: index.html
smwebsite/templates/smartmoving/: index.html
smwebsite/templates/smartparking/: index.html
smwebsite/templates/smwebsite/: index.html
smwebsite/templates/ucarpooling/: experiment.html  ilog_guide.html  index.html
