[tool.poetry]
name = "smwebpage"
version = "0.1.0"
description = ""
authors = ["Javier <jpaniagualaconich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
isort = "^5.6.4"
flake8-black = "^0.2.1"
pre-commit = "^2.9.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
